# HLM-Pred

./: LICENSE  README.md
figures/: Prediction_nn.html
pingpong-simulation/model/table/: model-1_4.sdf  model.config  model.sdf
pingpong-simulation/src/pingpang_control/: .gitignore  CMakeLists.txt  package.xml
pingpong-simulation/src/pingpang_control/scripts/: plan_point.json  plan_point.npy  plan_point.txt  plan_point_origin.txt  play_table_tennis.py  play_table_tennis_adapt_dir.py  utility.py
pingpong-simulation/src/pingpang_control/srv/: Table_Tennis.srv
pingpong-simulation/src/pingpang_gazebo/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  source.sh
pingpong-simulation/src/pingpang_gazebo/config/: pingpang.yaml  pingpang_joint_ctrlr_params.yaml  position_arm_controller.yaml
pingpong-simulation/src/pingpang_gazebo/launch/: pingpang_AI.launch
pingpong-simulation/src/pingpang_gazebo/script/: Controller.py  moveit_test.py  position.py  test.py
pingpong-simulation/src/pingpang_gazebo/urdf/: em_3905.urdf.xacro  pingpang.urdf  pingpang.urdf (another copy).xacro  pingpang.urdf (copy).xacro  pingpang.urdf.xacro  pingpang_origin.urdf.xacro  pingpang_tre.urdf.xacro  pingpang_trp.urdf.xacro  pingpang_trv.urdf.xacro  transmission.xacro  transmission_effort.xacro  transmission_p.xacro  transmission_v.xacro
pingpong-simulation/src/pingpang_gazebo/urdf/accessories/: stereo_camera.urdf.xacro
pingpong-simulation/src/pingpang_gazebo/urdf/accessories_yang/: stereo_camera.urdf.xacro
pingpong-simulation/src/pingpang_gazebo/worlds/: pingpang.world  t1_yang_v1.1.world  table_tennis.world  test.world
pingpong-simulation/src/ur10_moveit_config/config/: joint_limits.yaml  ur10.srdf
pingpong-simulation/src/ur10_moveit_config/launch/: moveit.rviz
pingpong-simulation/src/ur_description/urdf/: ur10.urdf.xacro  ur10_backup20170217.urdf.xacro  ur10_backup20170221.urdf.xacro  ur10_backup20170223.urdf.xacro  ur10_backup20170307.urdf.xacro  ur10_robot.urdf  ur10_robot.urdf.xacro  ur10_robot_backup20170301.urdf
pingpong-simulation/src/ur_gazebo/: t1.world  t1_wl.world  t1_yang_v1.1.world
report/: table_tennis_prediciton.aux  table_tennis_prediciton.nav  table_tennis_prediciton.out  table_tennis_prediciton.tex  table_tennis_prediciton.toc
scripts/: Model.py  Model_MF.py  Model_SF.py  Model_sim.py  convert_to_tfrecords.py  fc_model.py  main.py  model.py  multiframe_model.py  test.py  train_conditions.py  utility.py
tools/: acuqire_frame_data.py  convert_data.py  convert_data_multiprocess.py  convert_to_tfrecords.py  create_train_test_data.py
train/ckpt/: events.out.tfevents.1490187173.PVG-DSK-015  model.ckpt-96800.index
train/mf_ckpt/: checkpoint  model.ckpt-111200.data-00000-of-00001  model.ckpt-111200.index  model.ckpt-36000.data-00000-of-00001  model.ckpt-36000.index  model.ckpt-55500.data-00000-of-00001  model.ckpt-55500.index
train/sf_ckpt/: checkpoint  error_stats.csv  events.out.tfevents.1490251950.PVG-DSK-015  events.out.tfevents.1490253772.PVG-DSK-015  min_max.json  model.ckpt-35500.data-00000-of-00001  model.ckpt-35500.index  model.ckpt-55500.data-00000-of-00001  model.ckpt-55500.index  model.ckpt-96800.data-00000-of-00001
